--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,17 +26,19 @@ classifiers = [
     "Intended Audience :: Developers",
 ]
 dependencies = [
-    # PyTorch - will be dynamically configured by setup_gpu.py
-    "torch>=2.0.0",
-    "torchvision>=0.15.0",
-    # Core dependencies
-    "numpy>=1.24.0",
+    # PyTorch - pinned versions for compatibility
+    "torch==2.0.1",
+    "torchvision==0.15.2",
+    # Core dependencies - NumPy constraint to prevent 2.x compatibility issues
+    "numpy>=1.24.0,<2.0.0",
     "opencv-python>=4.8.0",
     "tqdm>=4.65.0",
-    "basicsr>=1.4.2",
-    "realesrgan>=0.3.0",
-    "facexlib>=0.3.0",
-    "gfpgan>=1.3.8",
+    # AI packages with specific versions for NumPy 1.x compatibility
+    "basicsr==1.4.2",
+    "realesrgan==0.3.0",
+    "facexlib==0.3.0", 
+    "gfpgan==1.3.8",
+    # Other dependencies
     "ffmpeg-python>=0.2.0",
     "requests>=2.31.0",
     "python-multipart>=0.0.6",
